# api-types-lab

./: pyproject.toml
01-rest/: client.py  notes.md  server.py
02-graphql/: client.py  notes.md  server.py
03-soap/: notes.md
