[project]
name = "api-types-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "ty>=0.0.52",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E,F basic. I for sorting imports. UP for modern syntax upgrade. B for common bugs.
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.13"