[project]
name = "api-types-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "lxml>=6.1.1",
    "requests>=2.34.2",
    "spyne>=2.14.0",
    "strawberry-graphql>=0.319.0",
    "uvicorn[standard]>=0.49.0",
    "zeep>=4.3.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "ty>=0.0.52",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E,F basic. I for sorting imports. UP for modern syntax upgrade. B for common bugs.
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.13"

[tool.uv.sources]
spyne = { git = "https://github.com/arskom/spyne.git" }
